# comunicado

./: .gitignore  CLAUDE.md  Cargo.toml  FLASH_FAST_INTEGRATION.md  MODERN_DASHBOARD_INTEGRATION.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  app_logs.txt  check_account_tokens.rs  debug_db_test.rs  debug_runtime_test.sh  debug_storage_vs_direct.rs  external_report.md  flake.nix  justfile  manual_oauth_setup.rs  oauth2-config-example.json  setup_gmail.py  setup_gmail_simple.py  simple_v_test.rs  test_account_loading.rs
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
dictionaries/: de_DE.dic  en_US.dic  es_ES.dic  fr_FR.dic  technical-terms.txt
docs/: README.md  account-management.md  ai-implementation.md  ai-methods.md  animation-support.md  auth-methods.md  automatic-sync.md  background-processing.md  better_tui.md  calendar-features.md  calendar-methods.md  configuration.md  core-methods.md  desktop-notifications.md  email-management.md  email-methods.md  imap_smtp_analysis_report.md  import-export.md  installation.md  keyboard-shortcuts-audit.md  keyboard-shortcuts-complete.md  keyboard-shortcuts-working.md  keyboard-shortcuts.md  media-support.md  method-documentation.md  next_for_ai.md  plugin-architecture.md  quick-start.md  services-methods.md  shortcuts.md  sms-mms-implementation-guide.md  sms-mms-integration-spec.md  terminal-compatibility.md  troubleshooting.md  ui-methods.md
examples/: animation_test.rs  background_processor_demo.rs  background_processor_demo.rs.disabled  email_sync_example.rs  email_sync_example.rs.disabled  token_diagnostics.rs  token_refresh_test.rs
src/: animation.rs  app.rs  app_fast_startup.rs  app_optimized.rs  cli.rs  clipboard.rs  events.rs  html.rs  images.rs  keyboard.rs  lib.rs  main.rs  main_fast.rs  main_optimized.rs  main_with_progress.rs  offline_integration.rs  offline_storage.rs  rfc_standards.rs
src/ai/: background.rs  cache.rs  config.rs  config_manager.rs  enhanced_service.rs  error.rs  factory.rs  meeting_scheduler.rs  mod.rs  provider.rs  retry.rs  service.rs  smart_compose.rs  streaming.rs  triage_tests.rs
src/calendar/: ai_assistant.rs  caldav.rs  database.rs  event.rs  event_form.rs  google.rs  invitation.rs  invitation_manager.rs  manager.rs  mod.rs  notifications.rs  sync.rs  ui.rs
src/contacts/: advanced_search.rs  advanced_search_ui.rs  autocomplete.rs  database.rs  manager.rs  mod.rs  popup.rs  providers.rs  sender_recognition.rs  sync.rs  ui.rs
src/email/: advanced_filters.rs  advanced_filters_ui.rs  ai_assistant.rs  async_sync_service.rs  attachment_viewer.rs  attachments.rs  auto_sync_scheduler.rs  database.rs  database_optimizations.rs  desktop_notifications.rs  email_loading_fix.rs  filters.rs  flash_fast_demo.rs  flash_fast_integration.rs  flash_fast_main.rs  folder_hierarchy.rs  imap_service.rs  maildir.rs  maildir_error_handling.rs  maildir_export_wizard.rs  maildir_exporter.rs  maildir_import_wizard.rs  maildir_importer.rs  maildir_integration_tests.rs  maildir_mapper.rs  maildir_ui.rs  message.rs  mod.rs  notifications.rs  operations_service.rs  performance_benchmarks.rs  performance_integration.rs  performance_tests.rs  precache_system.rs  sorting.rs  sync_config.rs  sync_engine.rs  thread.rs  threading_engine.rs  timestamp_utils.rs
src/imap/: account_manager.rs  client.rs  connection.rs  error.rs  idle.rs  mod.rs  protocol.rs  types.rs
src/keyboard/: customization.rs  shortcuts_ui.rs
src/maildir/: convert.rs  mod.rs  reader.rs  types.rs  utils.rs  writer.rs
src/migration/: migration_engine.rs  migration_ui.rs  mod.rs  thunderbird.rs
src/mime/: decoder.rs  mod.rs
src/mobile/: config.rs  mod.rs  services.rs  storage.rs  ui.rs
src/notifications/: desktop.rs  integration.rs  manager.rs  mod.rs  persistence.rs  types.rs
src/oauth2/: client.rs  file_import.rs  mod.rs  providers.rs  storage.rs  token.rs  wizard.rs
src/performance/: background_processor.rs  cache.rs  mod.rs  progress_tracker.rs  startup_optimizer.rs
src/plugins/: core.rs  examples.rs  loader.rs  manager.rs  mod.rs  registry.rs  tests.rs  types.rs  voice_commands.rs
src/services/: mod.rs  system_stats.rs  tasks.rs  weather.rs
src/smtp/: client.rs  message.rs  mod.rs  providers.rs  service.rs
src/spell/: config.rs  dictionary.rs  mod.rs  suggestion.rs
src/startup/: background_tasks.rs  lazy_init.rs  manager.rs  mod.rs  optimization.rs  progress.rs  screen.rs
src/system/: integration.rs  mod.rs  performance.rs
src/tea/: command.rs  message.rs  mod.rs  model.rs  update.rs
src/theme/: accessibility.rs  color.rs  config.rs  mod.rs  style.rs
src/ui/: account_inspector.rs  account_switcher.rs  ai_assistant_ui.rs  ai_calendar_ui.rs  ai_config_ui.rs  ai_popup.rs  ai_privacy_dialog.rs  animated_content.rs  animation.rs  calendar.rs  compose.rs  compose_tests.rs  content_preview.rs  context_calendar.rs  context_menu.rs  context_shortcuts.rs  date_picker.rs  draft_list.rs  dynamic_shortcuts.rs  email_viewer.rs  enhanced_message_list.rs  external_editor.rs  (+29 more)
test_json_parsing/: Cargo.toml
tests/: advanced_ai_integration_tests.rs  ai_integration_test_runner.rs  ai_performance_benchmarks.rs  async_sync_integration_tests.rs  attachment_tests.rs  auto_sync_integration_test.rs  basic_ai_integration_test.rs  ctrl_comma_integration_test.rs  email_rendering_tests.rs  email_sync_integration_tests.rs  email_threading_tests.rs  idle_tests.rs  imap_tests.rs  integration_test.rs  integration_tests.rs  keyboard_shortcut_test.rs  provider_attachment_test.rs  run_ai_tests.rs  settings_ui_test.rs  status_bar_tests.rs  theme_tests.rs  token_refresh_integration_tests.rs
(+51 files in other folders)
