[package]
name = "comunicado"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern TUI-based email and calendar client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/comunicado"
keywords = ["email", "calendar", "tui", "terminal", "imap"]
categories = ["command-line-utilities", "email"]

[dependencies]
# TUI Framework
ratatui = { version = "0.26", features = ["serde"] }
crossterm = "0.27"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }

# Text processing
regex = "1.10"

# HTML parsing and rendering
scraper = "0.19"
html2text = "0.6"

# Email and networking
base64 = "0.22"
oauth2 = { version = "4.4", default-features = false, features = ["rustls-tls"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2.5"
sha2 = "0.10"
rand = "0.8"

# Additional dependencies for contacts
async-trait = "0.1"
percent-encoding = "2.3"

# SMTP email sending
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder", "pool"], default-features = false }

# Secure storage
keyring = "2.3"

# Database and caching
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# System directories
dirs = "5.0"

# Full-text search and indexing  
# tantivy = "0.20"  # Temporarily disabled due to dependency conflicts

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"