[package]
name = "comunicado"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern TUI-based email and calendar client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/comunicado"
keywords = ["email", "calendar", "tui", "terminal", "imap"]
categories = ["command-line-utilities", "email"]

[dependencies]
# TUI Framework
ratatui = { version = "0.26", features = ["serde"] }
crossterm = "0.27"
clipboard = { version = "0.5", optional = true }
arboard = "3.4"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Command Line Interface
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }

# Text processing
regex = "1.10"

# HTML parsing and rendering (industry best practices - 2024/2025)
scraper = "0.19"  # Built on html5ever - browser-grade HTML parsing
html2text = "0.6"  # Industry standard for terminal HTML-to-text conversion
ammonia = "3.3"   # Security-first HTML sanitization using html5ever
pulldown-cmark = "0.9"  # Enhanced markdown support for better text formatting

# Image processing and terminal graphics
image = { version = "0.24", features = ["jpeg", "png", "gif", "webp"] }
imageproc = "0.23"

# Email and networking
base64 = "0.22"
oauth2 = { version = "4.4", default-features = false, features = ["rustls-tls"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2.5"
sha2 = "0.10"
rand = "0.8"

# TLS support for IMAP
tokio-rustls = "0.25"
rustls = "0.22"
rustls-webpki = "0.102"
webpki-roots = "0.26"

# Additional dependencies for contacts
async-trait = "0.1"

# Desktop notifications
notify-rust = "4.10"
percent-encoding = "2.3"

# SMTP email sending
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder", "pool"], default-features = false }

# Secure storage
keyring = "2.3"

# Database and caching
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }

# System directories
dirs = "5.0"

# System monitoring
sysinfo = "0.30"

# Hostname for Maildir unique IDs
hostname = "0.3"

# Spell checking dependencies removed - implementing custom solution

# Full-text search and indexing  
# tantivy = "0.20"  # Temporarily disabled due to dependency conflicts

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"